# AdvML_assignment1

./: Makefile  README.md  partA.sh  pyproject.toml  requirements.txt
AMLsrc/: summarize_partB.py
AMLsrc/configs/: partB_Flow.yaml
AdvML_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
HPC/jobs/: eval_partB.sh
HPC/outputs/: AE_w_bootstrap_new_20296556.err  AE_w_bootstrap_new_20296556.out  PartA_20251314.err  PartA_20251314.out  PartA_20251467.err  PartA_20251467.out  PartA_20251606.err  PartA_20251711.err  PartA_20251711.out  PartA_20251770.err  PartA_20251807.err  PartA_20251807.out  PartA_20252140.err  PartA_20365047.err  PartA_20365047.out  PartB_20296621.err  PartB_20296621.out  PartB_20296622.err  PartB_20296622.out  PartB_20296623.err  PartB_20296624.err  PartB_20296624.out  PartB_20296625.err  PartB_20296625.out  PartB_20296626.out  PartB_20296627.err  PartB_20296627.out  PartB_20296628.err  PartB_20296628.out  PartB_20298100.out  PartB_20298231.err  PartB_20361470.err  PartB_20361470.out  PartB_20361489.err  PartB_20361489.out  PartB_20361525.err  PartB_20361525.out  PartB_20361868.err  PartB_20361868.out  PartB_20361993.out  (+16 more)
models/partA_Gaussian_v1/1708039448/: config.yaml
models/partA_Gaussian_v1/1708040325/: config.yaml
models/partA_Gaussian_v1/1708041198/: config.yaml
models/partA_Gaussian_v1/1708042075/: config.yaml
models/partA_Gaussian_v1/1708042957/: config.yaml
models/partA_Gaussian_v1/1708043835/: config.yaml
reports/: PartA_metrics_aggregated.csv  PartB_FID_KID.txt  partA_metrics.csv
(+44 files in other folders)
