[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "AdvML_1"
version = "0.0.1"
description = "for Advanced Machine Learning course mini project 1"
authors = [
  { name = "Kasper J\u00f8rgensen", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["AMLsrc"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

